<resources>
    <string name="app_name">Goalie</string>
    <string name="cleaned">Successfully reduced space</string>
    <string name="file_provider">com.github.q115.goalie_android.fileprovider</string>
    <string name="manage_space">Manage Space</string>
    <string name="channel_description">Shows upcoming goal reminders</string>
    <string name="registerfirst">Invalid username, please open the app normally first</string>

    <!-- Menu -->
    <string name="action_profile">Profile</string>
    <string name="action_friends">Friends</string>
    <string name="action_invite_friends">Invite</string>
    <string name="action_add_friends">Add</string>

    <!-- Main -->
    <string name="tab_my_goal">My Goals</string>
    <string name="tab_requests">Requests</string>
    <string name="tab_feeds">Feeds</string>

    <!-- Feed -->
    <string name="feed_title">%1$s a goal worth %2$d reputation</string>
    <string name="goodluck">Good Luck!</string>
    <string name="congrats">Congratulations!</string>
    <string name="completed">Completed</string>

    <string name="started">Started</string>

    <!-- My Goals -->
    <string name="access_profile">Image of Referee</string>
    <string name="friend_profile">Image of Friend</string>
    <string name="fab_new">New Goal</string>
    <string name="fab_popular">Popular Goals</string>
    <string name="start_">start: %s</string>
    <string name="end_">end: %s</string>
    <string name="wagered_">wagered: %d</string>
    <string name="status_pending">status: pending</string>
    <string name="status_ongoing">status: ongoing</string>
    <string name="status_failed">status: failed</string>
    <string name="status_successful">status: successful</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no_refund">Points will be forfeited and will not be returned.</string>
    <string name="no_goals">No goals created yet</string>

    <!-- Requests -->
    <string name="no_requests">Not refereeing anyone at this time</string>

    <!-- Detail Dialog -->
    <string name="accept">Accept</string>
    <string name="accepte_toast">Goal Accepted</string>
    <string name="delete">Delete</string>
    <string name="decline_delete">Decline &amp; Delete</string>
    <string name="delete_toast">Goal Deleted</string>
    <string name="complete_toast">Goal Marked as Successful</string>
    <string name="fail">Fail</string>
    <string name="pass">Pass</string>
    <string name="failed_toast">Goal Marked as Failed</string>
    <string name="remind_friend">Remind Friend</string>
    <string name="remind_referee">Remind Referee</string>
    <string name="remind_sent">Successfully sent a reminder to %s</string>

    <!-- Friends -->
    <string name="friends">Friends</string>
    <string name="no_friends">No friends yet</string>
    <string name="enter_username">Enter the username of a friend you wish to add.</string>
    <string name="add_title">Add Friend</string>
    <string name="add">Add</string>
    <string name="already_friends">Already friends with this user.</string>
    <string name="no_self">Cannot add yourself as a friend.</string>
    <string name="join_me">Help me reach my goals by being my Referee! Join Goalie with me at http://goalie.es/dl</string>
    <string name="refresh">Refresh</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="username_error">Username should be 4 or more characters and must not contain \':\', \'/\', \'\\\' or space</string>
    <string name="username_hint">Username should be 4 or more characters.</string>
    <string name="username_taken">Username has been taken, please choose another.</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="profile_activities">Completed Goals</string>
    <string name="no_profile_activities">No completed goals yet</string>
    <string name="image_selection_error">Failed to read photo, please choose another.</string>
    <string name="image_taking_error">Image failed to be fetched from Camera. Try selecting an existing one.</string>
    <string name="reputation">Reputation: %d</string>
    <string name="uploaded">Uploaded</string>
    <string name="select_photo">Select photo</string>
    <string name="take_photo">Capture photo using Camera</string>
    <string name="choose_photo">Choose photo from Gallery</string>
    <string name="no_permission">Permission not granted to take and access Photos</string>
    <string name="no_permission_notification">Permission not granted to use Notification</string>
    <string name="no_permission_alarm">Permission not granted to use Alarm</string>

    <string name="bio_hint">Tell us about yourself</string>
    <string name="bio_label">Enter a short bio about yourself.</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="update_title">Update Information</string>

    <!-- New Goal -->
    <string name="title">Title</string>
    <string name="title_hint">What would you like to accomplish?</string>
    <string name="start_time">Starts</string>
    <string name="end_time">Ends</string>
    <string name="pick_time">Pick Time</string>
    <string name="wager">Wager</string>
    <string name="wagered">%1$d of %2$d Reputation</string>
    <string name="percent">%1$d%%</string>
    <string name="is_public">Show Goal Status in Feeds?</string>
    <string name="encouragement">Encouragement</string>
    <string name="encouragement_hint">(Optional) Notes or motivations</string>
    <string name="referee">Referee</string>
    <string name="alarm">Alarm</string>
    <string name="or">or</string>
    <string name="new_referee_hint">Username of Referee</string>
    <string name="set_goal">Set Goal</string>
    <string name="ok_goal">New Goal Created</string>
    <string name="ok">OK</string>
    <string name="error_goal">Failed to Create Goal</string>
    <string name="error_goal_no_title">No title entered for this goal.</string>
    <string name="error_goal_invalid_date">Invalid end time for this goal.</string>
    <string name="error_alarm_invalid_date">Alarm cannot be before start time.</string>
    <string name="error_goal_no_referee">No referee set for this goal.</string>
    <string name="wager_invalid">Wager amount is invalid. If you need more reputation points, you can get them when you become someone\'s referee.</string>
    <string name="alarm_permission_invalid">Goalie doesn\'t have permission to set alarm, are Notification &amp; Alarm enabled for app?</string>
    <string name="new_username">(New Username)</string>

    <!-- Notification -->
    <string name="notification_title">Goalie Notification</string>
    <string name="notification_remind">Goalie Reminder</string>
    <string name="notification_request">Goalie Request</string>
    <string name="notification_response">Goalie Response</string>

    <!-- Popular Goal -->
    <string-array name="popular_goals">
        <item>Complete a Task</item>
        <item>Get Fit</item>
        <item>Start New Habit</item>
        <item>Improve a Relationship</item>
    </string-array>

    <!-- Network -->
    <string name="connecting">Connecting&#8230;</string>
    <string name="error_updating">Error updating: %s</string>
    <string name="updated">Updated</string>
</resources>
