<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends_list"
        style="@style/RecycleViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/no_friends"
        android:textStyle="italic"/>
</androidx.cardview.widget.CardView>